<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <!-- Email Input -->
  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/emailTextInput"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/emailInputEdit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/email_hint"
      android:inputType="textEmailAddress" />

  </com.google.android.material.textfield.TextInputLayout>

  <!-- Password Input -->
  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/passwordTextInput"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="32dp"
    app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/passwordInputEdit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password_hint"
      android:inputType="textPassword" />

  </com.google.android.material.textfield.TextInputLayout>

  <!-- Submit Button -->
  <com.google.android.material.button.MaterialButton
    android:id="@+id/submitButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/submit_button" />

</merge>
