<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/container_margin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.access.LoginFragment">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:textSize="24sp"
      android:textAlignment="center"
      android:text="@string/login_header"/>

    <com.google.android.material.button.MaterialButton
      android:id="@+id/googleButton"
      android:layout_width="@dimen/social_media__buttons"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/white"
      android:textColor="@color/google__foreground"
      android:drawablePadding="24dp"
      android:text="@string/google_button"
      app:icon="@drawable/ic_google__logo"
      app:iconTint="@color/google__foreground"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="vertical">

      <include
        android:id="@+id/signInFormLayout"
        layout="@layout/signin__form"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
      android:id="@+id/registerButton"
      style="@style/Widget.MaterialComponents.Button.OutlinedButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/register_button"/>

  </LinearLayout>

</layout>
