<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".fragments.access.PersonalDataFragment">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/personal_data_tittle"
      android:textAlignment="center"
      android:textSize="30sp" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="60dp"
      android:gravity="center"
      android:orientation="vertical">

      <!-- Full name -->
      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/nameInput"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="Tu nombre completo"
          android:inputType="textCapWords"
          android:maxLines="1" />

      </com.google.android.material.textfield.TextInputLayout>

      <!-- Phone Number -->
      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        app:errorContentDescription="Tú número debe tener 8 dígitos"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/phoneNumber"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="Tu número telefónico"
          android:inputType="phone"
          android:maxLength="8"
          android:maxLines="1" />
      </com.google.android.material.textfield.TextInputLayout>

      <!-- Submit Button -->
      <com.google.android.material.button.MaterialButton
        android:id="@+id/submitPersonalData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/submit_button" />

      <!-- Skip Button -->
      <com.google.android.material.button.MaterialButton
        android:id="@+id/skipPersonalData"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_step" />

    </LinearLayout>

  </LinearLayout>

</layout>